Fix wrong paddings between log lines

--- a/src/components/Downloads/Downloads.module.sass
+++ b/src/components/Downloads/Downloads.module.sass
@@ -6,7 +6,7 @@
     display: flex
     flex-direction: column
     margin: 0 10px
-    line-height: 1.7
+    line-height: 2
 
     &List
         display: flex
@@ -17,7 +17,6 @@
     flex-direction: row
     align-items: center
     gap: 10px
-    padding: 2px 0
 
     &ID
         font-family: fonts.$font-family-code
